[package]
name = "cputray"
version = "0.8.0"
description = "Display CPU load in Windows Tray"
repository = "https://github.com/ZOXEXIVO/cpu_tray"
authors = ["Artemov Ivan  <zoxexivo@gmail.com>"]
edition = "2021"

[dependencies]
cpu-monitor = "0.1.1"
imageproc = "0.23.0"
image = "0.24.5"
rusttype = "0.9.3"
winit = "0.27.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser","wincon","shellapi"] }
